2009-07-10 John Wu <John.Wu at ACM.org>
	* src/mensa.cpp, src/bord.cpp: change group by operation involving
	categorical values to use the integer representation instead of
	the strings (should be faster than using strings)
	* tests/Makefile.am: add test case to check-text to exercise group
	by on categorical values
	* src/bundle.cpp: add statements to check for nil pointers

2009-07-09 John Wu <John.Wu at ACM.org>
	* src/category.h, src/category.cpp: clean up the documentation
	about members of ibis::dictionary and consolidate the null strings
	into a single class variable ibis::dictionary::nullstring.
	* src/colValues.h: add colStrings
	* src/colValues.cpp: change all bubble sort code to use selection
	sort to minimize the data movement
	* src/bord.cpp: change bord::groupby to make use of the new
	colStrings for TEXT and CATEGORY.  This makes it possible to
	perform group by with string valued columns through ibis::table
	interface (Andrew Olson needed this feature)

2009-07-08 John Wu <John.Wu at ACM.org>
	* INSTALL: clean up the file
	* src/category.cpp: delay reading of dictionary and generating .sp
	file as much as possible, define macro FASTBIT_EAGER_INIT_TEXT if
	eager initialization is desired

2009-07-06 John Wu <John.Wu at ACM.org>
	* src/util.h: modify round_down and round_up to check for input
	value out of the range of output value (with the use of
	std::numeric_limits template) (to address an issue raised by
	Jochen Schlosser)
	* tests/Makefile.am: change the type of c from short to unsigned
	short in t0 and t1, add query boundaries involving negative
	numbers to catch the error reported by Jochen Schlosser
	* src/whereClause.h, src/whereClause.cpp: add function
	standardizeRange to deal with negative boundaries in range
	expressions involving unsigned integer columns
	* src/idirekte.cpp: update function locate to work better with
	ranges including negative boundaries
	* src/part.cpp: add code in template part::doScan and